feat: merge master from local

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,32 @@ test/.coverage
 test/data/legacy_serialized.pt
 *~
 .idea
+.vscode/
+docs/Dockerfile
+docs/calibreq.assets
+docs/calibreq.md
+docs/calibreq.pdf
+docs/datasets.md
+docs/docker.md
+docs/epeparamters.assets
+docs/epeparamters.md
+docs/images
+docs/newidea.md
+docs/overview.md
+docs/problems.md
+docs/qa.md
+docs/stage2dataq.assets
+docs/stage2dataq.md
+docs/stage2dataq.pdf
+docs/stage2questions.assets
+docs/stage2questions.md
+docs/stage2train.assets
+docs/stage2train.md
+docs/stage2train.pdf
+docs/stage3.assets
+docs/stage3.md
+docs/stage3.pdf
+docs/stage3rec.assets
+docs/stage3rec.md
+docs/tips.md
+docs/workflow.md
